--- a/pryArmanini--Mascotas/pryArmanini--Mascotas.csproj
+++ b/pryArmanini--Mascotas/pryArmanini--Mascotas.csproj
@@ -60,18 +60,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -81,10 +81,23 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Fotos\Caniche.jpg" />
-    <Content Include="Fotos\Perro-salchicha.jpg" />
+    <None Include="fotos\Tortuga.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fotos\Boxer.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fotos\Caniche.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fotos\Gato.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fotos\Hamster.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fotos\Loro.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
